--- a/.github/workflows/part1/issue.yaml
+++ b/.github/workflows/part1/issue.yaml
@@ -11,5 +11,5 @@ jobs:
         run: echo hello world
       - name: step2
         run: |
-          echo hello world
+          echo hello world2
           echo github action
