--- a/.github/workflows/part1/pull_request.yaml
+++ b/.github/workflows/part1/pull_request.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: step1
-        run: echo hello world
+        run: echo hello world 2
       - name: step2
         run: |
           echo hello world
