--- a/.github/workflows/cache.yaml
+++ b/.github/workflows/cache.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: cache node.js module
       uses: actions/cache@v3
       with:
-        path: ~./npm
+        path: ~/.npm
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
