--- a/.github/workflows/artifact.yaml
+++ b/.github/workflows/artifact.yaml
@@ -6,12 +6,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo
-        uses: echo hello-world > hello.txt
+        run: echo hello-world > hello.txt
       - name: upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: artifact-text
-          paths: ./hello.txt
+          path: ./hello.txt
 
   download-artifact:
     runs-on: ubuntu-latest
@@ -24,4 +24,3 @@ jobs:
           path: ./
       - name: check
         run: cat hello.txt
-
