--- a/.github/workflows/output.yaml
+++ b/.github/workflows/output.yaml
@@ -4,11 +4,21 @@ on: push
 jobs:
   create-output:
     runs-on: ubuntu-latest
+    outputs:
+      test-key: ${{ steps.check-output.outputs.test }}
     steps:
       - name: echo output
         id: check-output
         run: |
-          echo "test=hello" >> $GITHUB_OUTPUT
+          echo "test-key=hello" >> $GITHUB_OUTPUT
       - name: name check
         run: |
           echo ${{ steps.check-output.outputs.test }}
+
+  get-output:
+    runs-on: ubuntu-latest
+    needs: [create-output]
+    steps:
+      - name: get output
+        run: |
+          echo ${{ needs.create-output.outputs.test-key }}
