--- a/.github/workflows/var-1.yaml
+++ b/.github/workflows/var-1.yaml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create env
-        run: echo "level-job" >> $GITHUB_ENV
+        run: echo "level=job" >> $GITHUB_ENV
       - name: check env
         run: echo "LEVEL ${{ env.level }}"
 
