--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -1,9 +1,20 @@
 name: environment
 on: push
 
+# environment > repo > org
+
 jobs:
   get-env:
     runs-on: ubuntu-latest
+    steps:
+      - name: check env & secret
+        run: |
+          echo ${{ vars.level }}
+          echo ${{ secrets.key }}
+
+  get-env-dev:
+    runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: check env & secret
         run: |
