--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -26,3 +26,26 @@ jobs:
       - name: create repo
         run: |
           gh repo create hwasowl-action/${{ inputs.prefix }}-${{ inputs.name }} --public --add-readme
+      - name: slack notification
+        id: create-repo
+        if: always()
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          payload: |
+            {
+              "attachments": [
+                {
+                  "pretext": "create github repository result",
+                  "color": "#36a64f",
+                  "fields": [
+                    {
+                      "title": "create repositort result ${{ steps.create-repo.outcome }}",
+                      "shot": true,
+                      "value": "${{ inputs.prefix }}-${{ inputs.name }}"
+                    }
+                  ]
+              ]
+            }
+        env:
+            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+            SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
