--- a/.github/workflows/create_repo.yaml
+++ b/.github/workflows/create_repo.yaml
@@ -23,11 +23,11 @@ jobs:
       - name: gh auth login
         run: |
           echo ${{ secrets.PERSONAL_ACCESS_TOKEN }} | gh auth login --with-token
-      - name: create repo
+      - name: create-repo
+        id: create-repo
         run: |
           gh repo create hwasowl-action/${{ inputs.prefix }}-${{ inputs.name }} --public --add-readme
-      - name: slack notification
-        id: create-repo
+      - name: slack
         if: always()
         uses: slackapi/slack-github-action@v1.24.0
         with:
@@ -39,8 +39,8 @@ jobs:
                   "color": "#36a64f",
                   "fields": [
                     {
-                      "title": "create repositort result ${{ steps.create-repo.outcome }}",
-                      "shot": true,
+                      "title": "create repositort result = ${{ steps.create-repo.outcome }}",
+                      "short": true,
                       "value": "${{ inputs.prefix }}-${{ inputs.name }}"
                     }
                   ]
