feat: notify slack when valid keyword issue opened

--- a/.github/workflows/issue_notify.yaml
+++ b/.github/workflows/issue_notify.yaml
@@ -5,7 +5,7 @@ on:
     types: [opened]
 
 jobs:
-  getKeyword:
+  get-keyword:
     runs-on: ubuntu-latest
     outputs:
       level: ${{ steps.get-keyword.outputs.level }}
@@ -26,3 +26,31 @@ jobs:
       - name: get output
         run: |
           echo ${{ steps.get-keyword.outputs.level }}
+  slack:
+    needs: [get-keyword]
+    if: needs.gey-keyword.outputs.level != 'Undefined' # 성공했지만 유효한 keyword 일 때만 실행
+    runs-on: ubuntu-latest
+    environment: ${{ needs.get-keyword.outputs.level }} # keyword 에 따라 environment 에서 다른 웹훅 채널 URL 을 가져오도록
+    steps:
+      - name: slack
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          payload: |
+            {
+              "attachments": [
+                {
+                  "pretext": "issue open alert message",
+                  "color": "#36a64f",
+                  "fields": [
+                    {
+                      "title": "Level: ${{ needs.get-keyword.outputs.level }}",
+                      "short": true,
+                      "value": "issue url: ${{ github.event.issue.html_url }}"
+                    }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # "environment" > repo > org 순으로 사용.
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
